@@ -1,3 +1,8 @@
+2012-07-08  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tkIntXlibDecls.h: [Bug 3541305]: Xfree/Xsync...
+	should not be macros
+
 2012-07-05  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/wm.n (geometry): [Bug 3538401]: Better description of the key
